2004-07-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/gconvert.c (g_unescape_uri_string): Don't validate
	for UTF-8 here.  (#148420, Robert Ögren)

	* tests/uri-test.c (run_roundtrip_tests): Add tests for 
	roundtrip compatibility. Going from filename to uri and 
	back should always give you the same filename back. 

2004-07-28  Matthias Clasen  <mclasen@redhat.com>

	* tests/markups/valid-{9,10,11}.gmarkup: 
	* tests/markups/fail-{37,38,39}.gmarkup: Tests for handling
	of whitespace inside tags.

	* glib/gmarkup.c (enum GMarkupParseState): Add 
	STATE_AFTER_ATTRIBUTE_NAME and STATE_AFTER_CLOSE_TAG_NAME.
	(g_markup_parse_context_parse): Accept whitespace between
	attribute names, '=' and attribute values and between
	close tag name and '>'. (#148646, Hiroyuki Ikezoe)

Tue Jul 27 02:01:31 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gstrfuncs.c (g_strsplit_set): s/g_strsplit/g_strsplit_set/
	as well.

Sat Jul 24 17:50:07 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* glib/gstrfuncs.c (g_strsplit_set):
	s/g_strtokenize/g_strsplit_set/ in docs.

Fri Jul 23 10:37:50 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/type-test.c (main): Actually test G_MAXSIZE with
	a gsize variable.

2004-07-21  Matthias Clasen  <mclasen@redhat.com>

	Fix #132858, Sven Neumann, patch by James Henstridge:
	
	* glib-gettextize.in: modify so that mkinstalldirs will 
	get installed into auxdir.

	* Makefile.am (gettext_SCRIPTS): install mkinstalldirs.

2004-07-21  Matthias Clasen  <mclasen@redhat.com>

	Fix #147651, reported by Oliver Guntermann:

	* glib/gprintfint.h (_g_vasprintf): Don't wrap vasprintf(),
	_g_gnulib_vasprintf() in a macro, since they behave 
	differently wrt. to memory allocation.

	* glib/gprintf.c (g_vasprintf): Instead, differentiate 
	here between the three cases: system vasprintf(), 
	_g_gnulib_vasprintf(), no vasprintf().  

2004-07-20  Crispin Flowerday  <gnome@flowerday.cx>

	* NEWS: Fix a typo in my name
